# spirit-rover

./: .gitignore  README.md  spirit-rover-code-quick-reference.md
Spirit_BaseSketch_PiControl_Rev01/: Comms.h  Comms.ino  Hardware.h  Hardware.ino  Infrared.ino  Navigation.ino  Pixels.ino  README.md  Sound.ino  Spirit_BaseSketch_PiControl_Rev01.ino  platformio.ini
Spirit_BaseSketch_PiControl_Rev01/lib/RingoWire/: RingoWire.h
spirit_pi_code/: MIGRATION.md  README.md  pyproject.toml  setup.py
spirit_pi_code/examples/movement/: motors_forward_backward.py  motors_spinleft.py  servo_shakehead.py  telemetry_and_failsafe.py
spirit_pi_code/examples/pixels/: pixel_autofade_wings.py  pixel_eyes.py  pixel_individual.py
spirit_pi_code/examples/sensors/: lightsense_ambient.py  lightsense_surface.py  rangefinder.py  volts.py
spirit_pi_code/pgpixelserver/: PixAnimation.py  PlumGeekPixelServer.py  ShutdownMonitor.py  pgpixelserver_launcher.sh  shutdownmonitor_launcher.sh
spirit_pi_code/rover/democode/: lightsense_ambient.py  lightsense_surface.py  motors.py  motors_spinleft.py  pixel_autofade_wings.py  pixel_eyes.py  pixel_individual.py  rangefinder.py  servo_shakehead.py  spirit_core.py  volts.py
spirit_pi_code/spirit_rover/: __init__.py  constants.py  core.py  pixels.py
